# ethrex

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .tool-versions  404.html  AGENTS.md  BLOCK_COMPOSITION_ANALYSIS.md  CHANGELOG.md  CLAUDE.local.md  CLI.html  CNAME  CONTRIBUTING.md  CONTRIBUTING_DOCS.html  Cargo.lock-bk2  Cargo.lockx  Cargo.toml  DB_OPTIMIZATION_PRIORITIES.md  Dockerfile  Dockerfile.sp1  ETHREX_DB_INTEGRATION_STATUS.md  ETHREX_DB_INTEGRATION_SUMMARY.md  ETHREX_DB_MIGRATION.md  FIXES.md  IMPLEMENTATION_SNIPPETS.md  LEVM_DISPATCH_INVESTIGATION.md  LICENSE-MIT  MINING_README.md  MINING_REPORT_2026_01.md  Makefile  PLAN-ethrex-guest-crate.md  QUICK_REFERENCE.md  README.md  ROADMAP.html  ROADMAP.md  RPC_INSTRUMENTATION_APPLIED.md  SNAPSYNC_DESIGN.md  SNAP_SYNC_BENCHMARKS.md  analyze_logs.py  book.toml  (+124 more)
benches/: Cargo.toml  MOCK_CONSENSUS_BENCHMARK.md  run_mock_consensus_bench.sh  run_perf_benchmark.sh
benches/benches/: build_block_benchmark.rs  healing_benchmark.rs  trie_benchmark.rs
benches/src/: generate_genesis.rs  mock_consensus.rs  perf_bench.rs
cmd/ethrex/: Cargo.toml  archive_sync.rs  banner.txt  build.rs  build_l2.rs  bulk_builder.rs  cli.rs  decode.rs  ethrex.rs  genesis.rs  holesky_presets.rs  info_box.rs  initializers.rs  l2.rs  launch.rs  lib.rs  migrate.rs  networks.rs  replay.rs  utils.rs
cmd/ethrex-evm/: Cargo.toml  README.md
cmd/ethrex-evm/src/: lib.rs  main.rs
cmd/ethrex-evm/tests/: error_map_tests.rs  run_tests.rs  state_root.rs  statetest_runner_tests.rs
cmd/ethrex/bench/: build_block_benchmark.rs  hoodi_blocks_benchmark.rs  import_blocks_benchmark.rs
cmd/ethrex/benches/: bench.rs
cmd/ethrex/l2/: command.rs  deployer.rs  initializers.rs  mod.rs  options.rs  system_contracts_updater.rs
cmd/ethrex/launch/: common.rs  l1.rs  l2.rs  mod.rs
cmd/ethrex/subcommands/: gen_chain.rs  import.rs  mod.rs  removedb.rs
cmd/ethrex_dev/: Cargo.toml  main.rs  test_dev.sh
cmd/ethrex_replay/: .gitignore  Cargo.toml  Makefile  main.rs  out.txt  replay.rs
cmd/ethrex_replay/src/: bench.rs  block_run_report.rs  cache.rs  cli.rs  constants.rs  fetcher.rs  helpers.rs  lib.rs  main.rs  networks.rs  plot_composition.rs  report.rs  run.rs
cmd/ethrex_rlpx_console/: Cargo.toml  hoodi.json  localnet.json  mainnet.json
cmd/ethrex_rlpx_console/src/: main.rs
cmd/load_test/: Cargo.toml  README.md  load_test.rs
cmd/load_test/src/: main.rs
cmd/loc/: Cargo.toml
cmd/loc/src/: main.rs  report.rs
cmd/snapshooter/: Cargo.toml  README.md
cmd/snapshooter/src/: main.rs
cmd/zkethrex/: Cargo.toml
cmd/zkethrex/src/: cli.rs  main.rs  report.rs  slack.rs
crates/blockchain/: Cargo.toml  README.md  binary_trie_db.rs  blockchain.rs  constants.rs  error.rs  fork_choice.rs  inclusion_list_builder.rs  inclusion_list_validator.rs  mempool.rs  mempool_pruner.rs  mempool_tx_pruner.rs  overlay_vm_db.rs  payload.rs  prewarm.rs  sampling.rs  sequencer_state.rs  simulate.rs  smoke_test.rs  state_dump.rs  stateless.rs  timings.rs  tracing.rs  transition_activator.rs  vm.rs
crates/blockchain/benches/: bench_add_block.rs
crates/blockchain/block_builder/: Cargo.toml  PLAN.md  (+2 more)
crates/bsc/: Cargo.toml
crates/common/: Cargo.toml  README.md  addresses.rs  base64.rs  common.rs  constants.rs  difficulty.rs  errors.rs  evm.rs  fd_limit.rs  genesis_utils.rs  kzg.rs  measure.rs  merkle_tree.rs  mpt_hash.rs  parse_toml.rs  rkyv_utils.rs  serde_utils.rs  tracing.rs  uint.rs  utils.rs  validation.rs
crates/ethrex-guest/: Cargo.toml
crates/gnosis/: Cargo.toml
crates/guest-program/: .gitignore  BRIDGE_GUEST_PROGRAM_DESIGN.md  Cargo.toml  Makefile  README.md  build.rs
crates/l2/: -ps  .env.example  .gitignore  .zk-dex-deployed.env  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.toml  config_example.toml  config_example_docker.toml  constants.rs  diff.diff  docker-compose-l2-shared-bridge.overrides.yaml  docker-compose-l2-store.overrides.yaml  docker-compose-l2-tdx.yaml  docker-compose-l2-web3signer.yaml  docker-compose-l2-websigner.yaml  docker-compose-l2.yaml  docker-compose-zk-dex-tools.yaml  docker-compose.yaml  docker-compose.yml  errors.rs  l2.rs  parse_toml.rs  run_ephimeral_network.sh  sdasdas  sidecar-config.template.json  sponsorable.txt  test  zkvm.rs
crates/polygon/: ARCHITECTURE.md  Cargo.toml
crates/prover/: Cargo.toml
crates/storage/: Cargo.toml  README.md  account_update.rs  api.rs  api_l2.rs  binary_trie_read.rs  binary_wiring.rs  block_data_buffer.rs  bloom.rs  bloombits.rs  cache.rs  clean_cache.rs  engine.rs  error.rs  ethrex_db_adapter.rs  fkv_keys.rs  flat_keys.rs  journal.rs  keys.rs  layering.rs  lib.rs  log_index.rs  merkleizer.rs  metrics.rs  migrations.rs  mpt_wiring.rs  prefetch_pool.rs  pruner.rs  query_plan.rs  read_stats.rs  rlp.rs  seed_migration_test.rs  state_backend.rs  state_engine.rs  state_manager.rs  store.rs  store_l2.rs  test_state_root_comparison.rs  transition_wiring.rs  trie.rs  (+3 more)
crates/test/: Cargo.toml
crates/tokamak-bench/: Cargo.toml
crates/tokamak-debugger/: Cargo.toml
crates/vm/: Cargo.toml  README.md  build.rs  constants.rs  db.rs  errors.rs  execution_db.rs  execution_result.rs  guest_program_state.rs  helpers.rs  levm.rs  lib.rs  mods.rs  prover_db.rs  revm.rs  spec.rs  state_diff.rs  system_contracts.rs  tracing.rs  vm.rs  witness_db.rs
crates/web3signer/: Cargo.toml  web3signer.rs
crates/websigner/: Cargo.toml  websigner.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_bn254.rs  fuzz_ecrecover.rs  fuzz_trie_operations.rs
fuzz/fuzzers/: block_decode.rs  precompile_all.rs  precompile_bls12_381.rs  precompile_modexp.rs  rlp_roundtrip.rs
test/: Cargo.toml
test/benches/: keccak.rs  trie_root.rs
test/packet-storm/: docker-compose.yaml  entrypoint.sh  generate.py  genesis.json  monitor.sh  run-flooder.sh  run.sh
test/src/: lib.rs
test/tests/: tests.rs
tools/: Cargo.toml
tools/genesis/: Cargo.toml
tools/hive_report/: Cargo.toml
tools/load_test/: Cargo.toml  README.md
tools/loc/: Cargo.toml
tools/src/: genesis.rs
tools/sync/: Makefile  Readme.MD
(+4029 files in other folders)
