[workspace]
members = [
  # Command line tools
  "cmd/ethrex",
  "cmd/ethrex_replay",

  # Core components
  "crates/blockchain",
  "crates/blockchain/metrics",
  "crates/blockchain/dev",
  "crates/common",
  "crates/common/rlp",
  "crates/common/trie",
  "crates/common/crypto",
  "crates/storage",
  "crates/vm",
  "crates/vm/levm",
  "crates/vm/levm/bench/revm_comparison",
  "crates/vm/levm/runner",

  # Networking
  "crates/networking/p2p",
  "crates/networking/rpc",

  # Layer 2
  "crates/l2/",
  "crates/l2/common",
  "crates/l2/prover",
  "crates/l2/prover/zkvm/interface",
  "crates/l2/sdk",
  "crates/l2/sdk/contract_utils",
  "crates/l2/storage",
  "crates/l2/networking/rpc",

  # Tools
  "tooling/genesis",
  "tooling/hive_report",
  "tooling/load_test",
  "tooling/loc",
  "tooling/archive_sync",
  "crates/common/config",
]
resolver = "2"

default-members = ["cmd/ethrex"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = 2

# ----------------------------------------------------------------------------
# Internal Crates
# ----------------------------------------------------------------------------
[workspace.dependencies]
ethrex-blockchain = { path = "./crates/blockchain" }
ethrex-metrics = { path = "./crates/blockchain/metrics", default-features = false }
ethrex-common = { path = "./crates/common" }
ethrex-storage = { path = "./crates/storage" }
ethrex-trie = { path = "./crates/common/trie" }
ethrex-rlp = { path = "./crates/common/rlp" }
ethrex-crypto = { path = "./crates/common/crypto" }
ethrex-vm = { path = "./crates/vm", default-features = false }
ethrex-levm = { path = "./crates/vm/levm" }
ethrex-p2p = { path = "./crates/networking/p2p" }
ethrex-rpc = { path = "./crates/networking/rpc" }
ethrex-l2 = { path = "./crates/l2" }
ethrex-l2-common = { path = "./crates/l2/common" }
ethrex-l2-rpc = { path = "./crates/l2/networking/rpc" }
ethrex-sdk = { path = "./crates/l2/sdk" }
ethrex-prover = { path = "./crates/l2/prover", default-features = false }
ethrex-storage-rollup = { path = "./crates/l2/storage" }
ethrex = { path = "./cmd/ethrex" }
ethrex-config = { path = "./crates/common/config" }

# ----------------------------------------------------------------------------
# Core & Infrastructure
# ----------------------------------------------------------------------------
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
log = "0.4.27"
env_logger = "0.11.8"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
thiserror = "2.0.9"
anyhow = "1.0.86"
eyre = "0.6.12"

libmdbx = { version = "=0.5.3", features = ["orm"] }
libsql = "0.9.10"

tokio = { version = "1.41.1", default-features = false }
tokio-util = { version = "0.7.15", features = ["rt"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
async-trait = "0.1.88"
spawned-concurrency = "0.3.0"
spawned-rt = "0.3.0"
rayon = "1.10.0"

cfg-if = "1.0.0"
once_cell = "1.20.2"
lazy_static = "1.5.0"
chrono = "0.4.41"
directories = "5.0.1"
rand = "0.8.5"

# ----------------------------------------------------------------------------
# Data Processing & Serialization
# ----------------------------------------------------------------------------
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1.0.117"
simd-json = "0.15.1"
bincode = "1.3.3"
rkyv = "0.8.10"
snap = "1.1.1"

bytes = { version = "1.6.0", features = ["serde"] }
tinyvec = "1.6.0"
itertools = "0.13.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
derive_more = { version = "1.0.0", features = ["full"] }
strum = { version = "0.27.1", features = ["derive"] }
dyn-clone = "1.0"

rustc-hex = "2.1.0"
hex = "0.4.3"
hex-literal = "0.4.1"
regex = "1.11.1"
envy = "0.4.2"
local-ip-address = "0.6"
crc32fast = "1.4.2"
malachite = "0.6.1"

# ----------------------------------------------------------------------------
# Blockchain & Cryptography
# ----------------------------------------------------------------------------
ethereum-types = { version = "0.15.1", features = ["serialize"] }
keccak-hash = "0.11.0"
ethers = "2.0"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.16.1" }
revm = { version = "19.0.0", default-features = false }
revm-primitives = { version = "15.2.0", default-features = false }
revm-inspectors = { version = "0.15.0" }
alloy-rlp = "0.3.12"

sha2 = "0.10.8"
sha3 = "0.10.8"
secp256k1 = { version = "0.29.1", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
p256 = { version = "0.13.2", features = [
  "ecdsa",
  "arithmetic",
  "expose-field",
] }
k256 = "0.13.4"
lambdaworks-crypto = "0.11.0"
lambdaworks-math = "0.11.0"
bls12_381 = { git = "https://github.com/lambdaclass/bls12_381", branch = "expose-fp-struct", features = [
  "groups",
  "bits",
  "pairings",
  "alloc",
  "experimental",
] }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
jsonwebtoken = "9.3.0"
hmac = "0.12.1"
aes = "0.8.4"
ctr = "0.9.2"
concat-kdf = "0.1.0"
ripemd = "0.1.3"
kzg-rs = "0.2.6"

# ----------------------------------------------------------------------------
# UI & Development Tools
# ----------------------------------------------------------------------------
clap = { version = "4.3", features = ["derive", "env"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
colored = "2.1.0"
spinoff = "0.8.0"
charming = { version = "0.4.0", features = ["ssr"] }
prettytable = "0.10.0"

datatest-stable = "0.2.9"
tokei = "12.1.2"

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2" }
reqwest = { version = "0.12.7", features = ["json"] }
prometheus = "0.13.4"
url = { version = "2.5.4", features = ["serde"] }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
