[package]
name = "ethrex-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex.workspace = true
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-config.workspace = true
ethrex-storage.workspace = true
ethrex-rlp.workspace = true
ethrex-trie.workspace = true
ethrex-p2p.workspace = true

bytes.workspace = true
tokio.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true
rand = "0.9.2"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.7.0", features = [
    "html_reports",
    "async_futures",
    "async_tokio",
] }
secp256k1.workspace = true
tempfile.workspace = true
ethrex-l2-rpc.workspace = true

[[bench]]
name = "build_block_benchmark"
harness = false

[[bench]]
name = "rlp_decode"
harness = false

[[bench]]
name = "rlp_encode"
harness = false

[[bench]]
name = "p2p_decode"
harness = false

[lints]
workspace = true
