[package]
name = "ethrex-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
rocksdb = ["ethrex-storage/rocksdb"]

[dependencies]
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-rlp.workspace = true
ethrex-trie.workspace = true
ethrex-p2p.workspace = true
ethrex-blockchain.workspace = true
ethrex-storage.workspace = true
ethrex-levm.workspace = true
ethrex-rpc.workspace = true

[dev-dependencies]
rustc-hash.workspace = true
hex.workspace = true
hex-literal.workspace = true
ethereum-types.workspace = true
rkyv.workspace = true
rand.workspace = true
tempfile.workspace = true
secp256k1.workspace = true
proptest = "1.0.0"
cita_trie = "4.0.0"
hasher = "0.1.4"
tokio = { workspace = true, features = ["full", "test-util"] }
bytes.workspace = true
serde_json.workspace = true
ethrex.workspace = true
ethrex-l2-common.workspace = true
ethrex-sdk.workspace = true
# Enable SQL for tests so we don't need `cargo test -p ethrex-test --features sql`.
ethrex-storage-rollup = { workspace = true, features = ["sql"] }
anyhow.workspace = true

[[test]]
name = "ethrex_tests"
path = "tests/tests.rs"

[lints]
workspace = true
