[workspace]
members = [
    "genesis",
    "hive_report",
    "load_test",
    "loc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Common CLI tool dependencies
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
eyre = "0.6.12"
tokio = { version = "1.41.1", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] } # Generic version, individual crates can specify more precise versions if needed or use this.
serde_json = { version = "1.0" } # Generic version

# Specific versions from observed usage (can be made more generic if preferred)
colored = "2.1.0"
spinoff = "0.8.0"
prettytable = "0.10.0"
tokei = "12.1.2" # From loc
futures = "0.3" # From load_test
keccak-hash = "0.11.0" # From load_test
ethereum-types = { version = "0.15.1", features = ["serialize"] } # From load_test
secp256k1 = { version = "0.29.1", default-features = false, features = ["global-context", "recovery", "rand"] } # From load_test


# Path dependencies to crates in the parent workspace
ethrex-common = { path = "../crates/common" }
ethrex-rpc = { path = "../crates/networking/rpc" }
ethrex-sdk = { path = "../crates/l2/sdk" }
ethrex-blockchain = { path = "../crates/blockchain" }