[package]
name = "ethrex-evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-crypto = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-vm = { workspace = true }
ethrex-levm = { workspace = true }

bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true
eyre.workspace = true
rustc-hash.workspace = true
# add_initial_state is async, so we need a tokio runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
ethrex-common = { workspace = true }
ethrex-storage = { workspace = true }
hex.workspace = true
