[package]
name = "ethrex"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-blockchain = { workspace = true, default-features = false }
ethrex-common = { workspace = true, default-features = false }
ethrex-config = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-p2p = { workspace = true, default-features = false }
ethrex-rlp.workspace = true
ethrex-rpc = { workspace = true, default-features = false }
ethrex-storage = { workspace = true, default-features = false }
ethrex-storage-rollup = { workspace = true, optional = true, default-features = false }
ethrex-vm = { workspace = true, default-features = false }

ethrex-l2 = { workspace = true, default-features = false, optional = true }
ethrex-l2-common = { workspace = true, default-features = false, optional = true }
ethrex-l2-rpc = { workspace = true, optional = true, default-features = false }
ethrex-dev = { path = "../../crates/blockchain/dev", optional = true, default-features = false }
ethrex-sdk = { workspace = true, default-features = false, optional = true }
ethrex-metrics = { path = "../../crates/blockchain/metrics" }
ethrex-prover = { workspace = true, default-features = false, optional = true, features = [
  "l2",
] }


guest_program = { path = "../../crates/l2/prover/src/guest_program", optional = true }

tikv-jemallocator = { version = "0.6.0", optional = true, features = [
  "stats",
  "unprefixed_malloc_on_supported_platforms",
] }

bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["string"] }
clap_complete.workspace = true
eyre.workspace = true
directories = "5.0.1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
local-ip-address = "0.6"
tokio-util.workspace = true
lazy_static.workspace = true
secp256k1.workspace = true                         # FIXME
reqwest.workspace = true
thiserror.workspace = true
itertools = "0.14.0"
url.workspace = true

# L2 external dependencies

tui-logger = { workspace = true, optional = true }

[target.'cfg(linux)'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true, features = [
  "stats",
  "unprefixed_malloc_on_supported_platforms",
  "background_threads",
] }

[[bin]]
name = "ethrex"
path = "./ethrex.rs"

[lib]
name = "ethrex"
path = "./lib.rs"

[features]
default = ["rocksdb", "l1", "dev", "metrics", "jemalloc"]
debug = ["ethrex-vm/debug"]
dev = ["dep:ethrex-dev"]

metrics = ["ethrex-blockchain/metrics", "ethrex-l2?/metrics"]

sp1-guest = ["guest_program/sp1-guest"]
risc0-guest = ["guest_program/risc0-guest"]
rocksdb = ["ethrex-storage/rocksdb", "ethrex-p2p/rocksdb"]

jemalloc = ["dep:tikv-jemallocator"]
jemalloc_profiling = [
  "jemalloc",
  "tikv-jemallocator/profiling",
  # forward to the RPC crate so its handlers and dependency are enabled
  "ethrex-rpc/jemalloc_profiling",
]
sync-test = ["ethrex-p2p/sync-test"]

sp1 = ["ethrex-prover/sp1"]
l1 = [
  "ethrex-blockchain/l1",
  "ethrex-common/l1",
  "ethrex-storage/l1",
  "ethrex-p2p/l1",
  "ethrex-vm/l1",
  "ethrex-l2/l1",
  "ethrex-l2-rpc/l1",
  "ethrex-l2-common/l1",
  "ethrex-sdk/l1",
  "ethrex-storage-rollup/l1",
  "ethrex-config/l1",
  "ethrex-rpc/l1",
  "ethrex-metrics/l1",
  "ethrex-prover/l1",
]
l2 = [
  "ethrex-l2",
  "ethrex-l2-common",
  "ethrex-l2-rpc",
  "ethrex-sdk",
  "ethrex-p2p/l2",
  "ethrex-prover",
  "ethrex-storage-rollup",
  "dep:tui-logger",
  "dep:bytes",
  "dep:genesis-tool",
  "dep:thiserror",
  "dep:serde_json",
  "dep:hex",
]
l2-sql = ["ethrex-storage-rollup/sql"]
gpu = ["ethrex-prover/gpu"]

[dev-dependencies]
criterion = { version = "0.5.1", features = [
  "html_reports",
  "async_futures",
  "async_tokio",
] }
secp256k1.workspace = true
tempfile.workspace = true
ethrex-l2-rpc.workspace = true

[[bench]]
path = "./bench/import_blocks_benchmark.rs"
name = "import_blocks_benchmark"
harness = false

[[bench]]
path = "./bench/build_block_benchmark.rs"
name = "build_block_benchmark"
harness = false

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc"] }
ethrex-sdk = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
ethrex-common = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
genesis-tool = { path = "../../tooling/genesis", optional = true }
thiserror = { workspace = true, optional = true }
