[package]
name = "ethrex-dev-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[[bin]]
name = "ethrex-dev"
path = "main.rs"

[dependencies]
ethrex-block-builder.workspace = true
ethrex-blockchain.workspace = true
ethrex-rpc.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-config.workspace = true
ethrex-p2p.workspace = true

spawned-rt.workspace = true
spawned-concurrency.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ethereum-types.workspace = true
hex.workspace = true
eyre.workspace = true
serde_json.workspace = true
axum.workspace = true
bytes.workspace = true

[lints]
workspace = true
