[package]
name = "ethrex-replay"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[[bin]]
name = "ethrex-replay"
path = "main.rs"

[dependencies]
ethrex-common = { workspace = true, default-features = false, features = ["secp256k1"] }
ethrex-storage = { workspace = true, features = ["rocksdb"] }
ethrex-vm = { workspace = true, features = ["secp256k1"] }
ethrex-blockchain = { workspace = true }
ethrex-binary-trie = { workspace = true }
ethrex-crypto = { workspace = true, default-features = false, features = ["secp256k1"] }

anyhow.workspace = true
clap = { workspace = true }
hex.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
