[package]
name = "ethrex_loadtest"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-l2.workspace = true
ethrex-sdk.workspace = true
ethrex-common.workspace = true
ethrex-blockchain = { workspace = true, features = ["l2"] }
ethrex-rlp.workspace = true
ethrex-rpc.workspace = true
ethrex-storage = { workspace = true, features = ["libmdbx"] }

serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true
secp256k1.workspace = true
keccak-hash.workspace = true
reqwest.workspace = true
sha2.workspace = true

log = "0.4"
clap = { version = "4.5.35", features = ["derive"] }
eyre = "0.6"

[[bin]]
name = "load_test"
path = "./load_test.rs"
