[package]
name = "loc"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

tokei = "12.1.2"
clap = { version = "4.3", features = ["derive"] }
clap_complete.workspace = true
colored.workspace = true
spinoff.workspace = true
prettytable = "0.10.0"
