[package]
name = "snapshooter"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex.workspace = true
ethrex-common.workspace = true
ethrex-rlp.workspace = true
ethrex-storage = { workspace = true, features = ["rocksdb"] }
ethrex-trie.workspace = true
