[package]
name = "zkethrex"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-rpc.workspace = true
ethrex-config.workspace = true
guest_program = { path = "../../crates/l2/prover/src/guest_program" }

ere-dockerized = { git = "https://github.com/eth-act/ere", package = "ere-dockerized" }
zkvm-interface = { git = "https://github.com/eth-act/ere", package = "zkvm-interface" }

tokio.workspace = true
rkyv.workspace = true
